[gd_scene load_steps=7 format=3 uid="uid://eio7jp8xiwxf"]

[ext_resource type="Script" path="res://Scenes/UI/card_visuals.gd" id="1_7d04v"]
[ext_resource type="StyleBox" uid="uid://bg0iwm7uf4ipl" path="res://Scenes/CardUI/Styleboxes/Normal/normal_base_card_stylebox.tres" id="1_xobgo"]
[ext_resource type="Resource" uid="uid://c0bcvutrqx8oi" path="res://Character Attributes/Typings/Ghost/Ghost Cards/ghost_hex.tres" id="2_ou273"]
[ext_resource type="Theme" uid="uid://cru70siydt0qh" path="res://main_theme.tres" id="2_ucctf"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="3_fnw4n"]
[ext_resource type="Texture2D" uid="uid://c16w1qu83dwdl" path="res://art/rarity.png" id="4_hadvy"]

[node name="CardVisuals" type="Control"]
custom_minimum_size = Vector2(58, 72)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7d04v")
card = ExtResource("2_ou273")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 58.0
offset_bottom = 72.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_xobgo")

[node name="CardIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_fnw4n")
expand_mode = 1
stretch_mode = 5

[node name="Rarity" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 15.0
grow_horizontal = 0
texture = ExtResource("4_hadvy")
expand_mode = 1
stretch_mode = 5

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 20.0
offset_bottom = 22.0
theme = ExtResource("2_ucctf")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -21.0
offset_right = -2.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ucctf")
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 11
text = "Tail Slap Pressure"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
